@@ -46,15 +46,7 @@ Returns, as a string, the location of the machine on which ECL runs."
 (defun lisp-implementation-version ()
   "Args:()
 Returns the version of your ECL as a string."
-<<<<<<< HEAD:src/lsp/config.lsp.in
-<<<<<<< HEAD:src/lsp/config.lsp.in
-  "@PACKAGE_VERSION@ (CVS 2008-05-29 20:53)")
-=======
-  "@PACKAGE_VERSION@ (CVS 2008-05-30 15:21)")
->>>>>>> 510929fe4fe845e539f661d00860e084248060a4:src/lsp/config.lsp.in
-=======
-  "@PACKAGE_VERSION@ (CVS 2008-05-30 19:03)")
->>>>>>> 263c837285a673bf4d38ad60aab4a8d59443a475:src/lsp/config.lsp.in
+  "@PACKAGE_VERSION@ (CVS 2008-05-31 01:49)")
 
 (defun machine-type ()
   "Args: ()
